<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.example.permissionforge_ng.viewModel.ApplicantViewModel"/>
        <variable name="parameterFragment" type="com.example.permissionforge_ng.ShowFragment"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParameterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/applicant_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_请假人姓名"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/applicant_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/counselor_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_辅导员姓名"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicant_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/counselor_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_时长"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counselor_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/school_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_地点"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/school_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reason_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_请假原因"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reason_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dst_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_目的地"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reason_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dst_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/home_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_宿舍信息"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dst_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/home_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dst_label" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>